Fixed spacing in menu

--- a/themes/hugo-alageek-theme/static/css/main.css
+++ b/themes/hugo-alageek-theme/static/css/main.css
@@ -141,7 +141,7 @@ h6 {
 
 .header ul.nav li.nav-item::before {
     content: "-";
-    margin-right: 5px;
+    margin-right: 10px;
 }
 
 .header ul.nav li.nav-item:first-child::before {
